# AIScoutBot

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  start.sh  stop.sh
bot/: Dockerfile  agent_handler.py  config.py  db.py  formatter.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  sender.py  tools.py
bot/scanner/: __init__.py  base.py  huggingface.py
gateway/: Dockerfile  package.json
gateway/src/: index.js  logger.js  routes.js  whatsapp.js
systemd/: bot.service  gateway.service
